@@ -1,4 +1,3 @@
-readvertise knob under routers
 allow command to be a substring of an other
 quic
 update gtp stack to the latest standards
